[fix] login/register forms were unreadable

--- a/pinry/static/css/pinry.css
+++ b/pinry/static/css/pinry.css
@@ -90,11 +90,13 @@ textarea {
 
 #form h1 {
     text-align: center;
+    text-shadow: 0 0 15px black;
 }
 
 #form h3 {
     text-align: center;
     margin-bottom: 15px;
+    text-shadow: 0 0 8px black;
 }
 
 #form .form-group {
@@ -350,6 +352,7 @@ body {
     background-size: cover;
     width: 100%;
     height: 100%;
+    color: #D8D8D8;
 }
 
 #bookmarklet {
